전체 컨텐츠 정렬 수정 중

--- a/assets/02-css/02-cssBeginner/11-css_formatting.html
+++ b/assets/02-css/02-cssBeginner/11-css_formatting.html
@@ -233,7 +233,7 @@
 	<!-- 2.11.2. 위치 및 정렬 관련 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">2.11.2. 위치 및 정렬 관련 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			문서 상에 요소를 배치하는 방법을 지정합니다.<br>
 			top, right, bottom, left 속성이 요소를 배치할 최종 위치를 결정하며 z-index 속성으로 보이는 순서를 결정합니다.
 		</p>
@@ -596,8 +596,8 @@
 		</article>
 
 		<article class="view_editor edit_code mt_l" data-target="css/step01/2.11.visual-formatting-model/2.11.3.float.html">
-			<h3 class="ve_tit sound_only">예제</h3>
-			<div class="uk_editor min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<h3 class="ve_tit">예제</h3>
+			<div class="uk_editor indent min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</article>
@@ -611,7 +611,7 @@
 				<li class="safari">1.0</li>
 			</ul>
 		</aside>
-		<aside class="browser_support mt_s" data-tit="clear">
+		<aside class="browser_support mt_m" data-tit="clear">
 			<ul>
 				<li class="ie">4+</li>
 				<li class="edge">12.0</li>
@@ -633,7 +633,7 @@
 	</section>
 
 
-	<section class="reference_box mt_l">
+	<section class="reference_box mt_xxl">
 		<h2 class="tit">위치 속성 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="https://www.w3.org/TR/2011/REC-CSS2-20110607/visuren.html" target="_blank" class="fas" title="새창열림">W3C Visual formatting model</a></li>
