--- a/assets/02-css/02-cssBeginner/12-css_interface.html
+++ b/assets/02-css/02-cssBeginner/12-css_interface.html
@@ -15,7 +15,7 @@
 	<!-- outline 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">outline</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			outline 속성은 HTML 요소의 가장 바깥 부분을 둘러싸고 있는 아웃라인 부분의 스타일을 설정합니다.<br>
 			이 속성은 border 속성과 마찬가지로 style, width, color 속성을 가집니다.<br>
 			하지만 outline 속성은 border 속성과는 달리 HTML 요소의 전체 크기에는 포함되지 않습니다.<br>
@@ -30,7 +30,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">outline</strong> : 아웃라인 축약 표현(outline shorthand)으로 모든 outline 속성을 이용한 스타일을 한 줄에 설정할 수 있습니다.</li>
 				<li><strong class="t_black">outline-width</strong> : 아웃라인(outline)의 너비를 설정합니다.</li>
@@ -83,8 +83,8 @@
 		</article>
 
 		<article class="view_editor edit_code mt_l" data-target="css/step01/2.12.ui-interface/2.11.outline.html">
-			<h3 class="ve_tit sound_only">예제</h3>
-			<div class="uk_editor min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<h3 class="ve_tit">예제</h3>
+			<div class="uk_editor indent min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</article>
@@ -104,7 +104,7 @@
 	<!-- cursor 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">cursor</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			요소 위에 마우스 커서가 올라갔을 때 보여줄 모양을 지정합니다.<br>
 			속성 값에 따라 브라우저 지원이 다릅니다.
 		</p>
@@ -242,7 +242,7 @@
 		</aside>
 	</section>
 
-	<section class="reference_box mt_l">
+	<section class="reference_box mt_xxl">
 		<h2 class="tit">사용자 인터페이스 속성 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="https://www.w3.org/TR/2011/REC-CSS2-20110607/ui.html" target="_blank" class="fas" title="새창열림">W3C UI</a></li>
