--- a/assets/02-css/03-cssMiddleclass/04-css_vendor.html
+++ b/assets/02-css/03-cssMiddleclass/04-css_vendor.html
@@ -41,7 +41,7 @@
 	</blockquote>
 
 	<!-- 벤더 프리픽스(vendor prefix) -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">벤더 프리픽스(vendor prefix)</h2>
 
 		<aside class="browser_support vendor mt_m" data-tit="(vendor prefix)">
@@ -88,7 +88,7 @@
 		</div>
 	</section>
 
-	<aside class="reference_box mt_l">
+	<aside class="reference_box mt_xxl">
 		<h2 class="tit">CSS 접두어(Vendor Prefix) 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="https://www.w3.org/TR/CSS21/syndata.html#vendor-keywords" target="_blank" class="fas" title="새창열림">W3C Vendor-specific extensions</a></li>
