--- a/assets/02-css/03-cssMiddleclass/06-css_module3_part2.html
+++ b/assets/02-css/03-cssMiddleclass/06-css_module3_part2.html
@@ -89,7 +89,7 @@
 		<!-- 선형 그래디언트(linear gradients) -->
 		<article class="indent mt_l">
 			<h3 class="ml_mn"><i class="t_blue">선형 그래디언트</i>(linear gradients) <i class="fab fa-css3-alt"></i></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<mark>CSS Module Level 3</mark><br>
 				선형 그래디언트(linear gradient)는 적용된 HTML 요소에 선형으로 그래디언트(gradient) 효과를 적용시켜 즙니다.<br>
 				선형 그래디언트를 만들기 위해서는 최소한 두 개 이상의 색상 지정점이 필요합니다.<br>
@@ -218,17 +218,18 @@
 				</ol>
 			</div>
 
-			<div class="view_editor edit_code mt_m" data-target="css/step02/3.6.css3-module/3.6.5.css3-linear-gradients-css.html">
-				<div class="uk_editor min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<div class="view_editor edit_code mt_l" data-target="css/step02/3.6.css3-module/3.6.5.css3-linear-gradients-css.html">
+				<h4 class="ve_tit">선형 그래디언트(linear gradients) 예제</h4>
+				<div class="uk_editor indent min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 					<div class="code_wrap"><textarea></textarea></div>
 				</div>
 			</div>
 		</article>
 
 		<!-- 원형 그래디언트(radial gradients) -->
-		<article class="indent mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">원형 그래디언트</i>(radial gradients) <i class="fab fa-css3-alt"></i></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<mark>CSS Module Level 3</mark><br>
 				원형 그래디언트(radial gradient)는 적용된 HTML 요소에 원형으로 그래디언트(gradient) 효과를 적용시켜 줍니다.<br>
 				원형 그래디언트를 만들기 위해서는 최소한 두 개 이상의 색상 지정점이 필요합니다.<br>
@@ -329,14 +330,14 @@
 			</div>
 		</article>
 
-		<article class="view_editor edit_code mt_l" data-target="css/step02/3.6.css3-module/3.6.5.css3-linear-gradients.html">
+		<article class="view_editor edit_code mt_xl" data-target="css/step02/3.6.css3-module/3.6.5.css3-linear-gradients.html">
 			<h3 class="ve_tit">CSS3 그래디언트 예제</h3>
 			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</article>
 
-		<aside class="browser_support mt_m" data-tit="gradient">
+		<aside class="browser_support mt_xl" data-tit="gradient">
 			<ul>
 				<li class="ie">10+</li>
 				<li class="edge">12.0</li>
@@ -347,7 +348,7 @@
 			</ul>
 		</aside>
 
-		<aside class="reference_box mt_l">
+		<aside class="reference_box mt_xl">
 			<h2 class="tit">gradients 참조</h2>
 			<ul class="link_lst">
 				<li class="reference"><a href="https://drafts.csswg.org/css-images-3/#gradients" target="_blank" class="fas" title="새창열림">W3C CSS Images Module Level 3</a></li>
@@ -480,7 +481,7 @@
 			</div>
 		</article>
 
-		<aside class="browser_support mt_m" data-tit="calc()">
+		<aside class="browser_support mt_l" data-tit="calc()">
 			<ul>
 				<li class="ie">9+</li>
 				<li class="edge">12.0</li>
