--- a/assets/02-css/03-cssMiddleclass/07-css_atrule.html
+++ b/assets/02-css/03-cssMiddleclass/07-css_atrule.html
@@ -19,10 +19,11 @@
 			다음 세미콜론(';' (U+003B SEMICOLON)) 또는 다음 CSS 블록 중 먼저 오는 쪽까지 모든 것을 포함합니다.
 		</p>
 	</blockquote>
-	<p class="mt_s">식별자가 지정된 각각 다른 구문인 여러 @규칙(At-Rule)에 대해 설명합니다.</p>
+
+	<p class="mt_xxl font-16 t_black weight-bold">식별자가 지정된 각각 다른 구문인 여러 @규칙(At-Rule)에 대해 설명합니다.</p>
 
 	<!-- @charset -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xl">
 		<h2 class="ml_mn t_blue">@charset</h2>
 		<p class="mt_ms">
 			스타일 시트에 쓰이는 문자 인코딩을 지정합니다.<br>
@@ -49,7 +50,7 @@
 	</section>
 
 	<!-- @import -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn t_blue">@import</h2>
 		<p class="mt_ms">
 			스타일 시트에서 다른 스타일 규칙을 가져올 때 쓰입니다.<br>
@@ -109,7 +110,7 @@
 	</section>
 
 	<!-- @namespace -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn t_blue">@namespace</h2>
 		<p class="mt_ms">
 			CSS 스타일 시트에서 사용되는 XML 네임스페이스를 정의하는 at-규칙입니다.<br>
@@ -168,13 +169,14 @@
 		</aside>
 	</section>
 
-	<p class="mt_xl t_black font-16 weight-600">
+	<hr class="dashed_line mt_xxl">
+	<p class="mt_xxl t_black font-16 weight-600">
 		위에서 지정된 규칙외에 중첩 문의 부분 집합으로 이루어진 중첩 @-규칙 대해 설명합니다.<br>
 		중첩 @-규칙 - 중첩 문의 부분 집합으로, 조건부 그룹 규칙 속뿐만 아니라 스타일 시트의 문으로 사용될 수 있습니다.
 	</p>
 
 	<!-- @supports -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn t_blue">@supports</h2>
 		<p class="mt_ms">
 			하나 이상의 특정 CSS 기능에 대한 브라우저의 지원에 따라 선언을 지정할 수 있습니다. 이를 기능 쿼리라고합니다.<br>
@@ -245,7 +247,7 @@
 	</section>
 
 	<!-- @media -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn t_blue">@media</h2>
 		<p class="mt_ms">
 			장치가 미디어 질의(media query)를 사용하여 정의된 조건의 기준을 만족하면 해당 콘텐츠를 적용하는 조건부 그룹 규칙입니다.<br>
@@ -290,7 +292,7 @@
 	</section>
 
 	<!-- @page -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn t_blue">@page</h2>
 		<p class="mt_ms">
 			문서를 인쇄할 때 일부 CSS 속성을 수정하는 데 쓰입니다. <code>@page</code>로 모든 CSS 속성을 바꿀 수는 없습니다.<br>
@@ -320,7 +322,7 @@
 	</section>
 
 	<!-- @font-face -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn t_blue">@font-face</h2>
 		<p class="mt_ms">
 			텍스트를 표시 할 사용자 정의 글꼴을 지정합니다. 글꼴은 원격 서버나 로컬 컴퓨터에서 사용자 컴퓨터에로드 할 수 있습니다.<br>
@@ -329,13 +331,14 @@
 	</section>
 
 	<!-- @keyframes -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn t_blue">@keyframes</h2>
 		<p class="mt_ms">
 			애니메이션 시퀀스를 따라 키 프레임 (또는 웨이 포인트)의 스타일을 정의하여 CSS 애니메이션 시퀀스의 중간 단계를 제어합니다.<br>
 			<code>@keyframes</code>을 사용하는 자세한 방법은 고급과정 <a href="/?data=Assets&CSS&cssAdvanced&css_animation" class="uk_link t_blue underline weight-600">Animation</a>에서 설명.
 		</p>
 	</section>
+
 
 	<aside class="reference_box mt_xxl">
 		<h2 class="tit">@규칙(At-Rule) 참조</h2>
