--- a/assets/02-css/03-cssMiddleclass/08-css_fontface.html
+++ b/assets/02-css/03-cssMiddleclass/08-css_fontface.html
@@ -53,7 +53,7 @@
 			</p>
 			<div class="ol_lst indent mt_ms">
 				<ol>
-					<li class="line_code font14">
+					<li class="line_code font14 mt_ms">
 						<strong class="mb_sm">트루 타입 글꼴(TrueType Fonts, TTF)</strong>
 						<p>TrueType은 1980 년대 후반 Apple과 Microsoft에서 개발 한 글꼴 표준입니다.</p>
 						<p>TrueType은 Mac OS 및 Microsoft Windows 운영 체제에서 가장 일반적인 글꼴 형식입니다.</p>
@@ -62,7 +62,7 @@
 						<p>OTF/TTF 형식은 쉽게 복제될 수 있어(불법으로) 대신 WOFF 형식이 만들어졌습니다.</p>
 						<p>IE에서 글꼴 형식은 "설치 가능"으로 설정된 경우에만 작동합니다.</p>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_ms">
 						<strong class="mb_sm">오픈 타입 글꼴(OpenType Fonts, OTF)</strong>
 						<p>OpenType은 확장 가능한 컴퓨터 글꼴 형식입니다. TrueType을 기반으로하며 Microsoft의 등록 상표입니다.</p>
 						<p>글꼴은 오늘날 주요 컴퓨터 플랫폼에서 일반적으로 사용됩니다.</p>
@@ -71,7 +71,7 @@
 						<p>오픈 타입 글꼴은 유니코드를 기반으로 다양한 스크립트를 지원하며, 한 번에 여러 스크립트를 함께 지원할 수 있다는 장점을 가지고 있습니다.</p>
 						<p>OTF/TTF 형식은 쉽게 복제될 수 있어(불법으로) 대신 WOFF 형식이 만들어졌습니다.</p>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_ms">
 						<strong class="mb_sm">웹 오픈 글꼴(The Web Open Font Format, WOFF)</strong>
 						<p>WOFF는 웹 페이지에서 사용하기위한 글꼴 형식입니다.</p>
 						<p>웹 오픈 글꼴은 웹 페이지에서 사용할 수 있는 글꼴 표준이며, 2009 년에 개발되었으며 현재 W3C에서 사용을 권장하고 있는 글꼴 표준입니다.</p>
@@ -79,11 +79,11 @@
 						<p>모질라와 다른 조직들이 결합하여 웹에서 사용할 목적으로 개발했습니다.</p>
 						<p>OTF/TTF 를 이용한 구조의 압축된 버전으로, 다른 글꼴 형식보다 빠르게 로드됩니다.</p>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_ms">
 						<strong class="mb_sm">웹 오픈 글꼴 2.0(The Web Open Font Format 2.0, WOFF 2.0)</strong>
 						<p>이 글꼴은 웹 오픈 글꼴 1.0 버전보다 더 나은 압축률을 제공하는 트루 타입 또는 오픈 타입 글꼴입니다.</p>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_ms">
 						<strong class="mb_sm">SVG 글꼴(SVG Fonts/Shapes)</strong>
 						<p>SVG/SVGZ (Scalable Vector Graphics (Font)</p>
 						<p>SVGZ는 SVG의 압축된 버전.</p>
@@ -97,7 +97,7 @@
 						<p>디바이스 iOS Safari는 현재 3.2+ 부터 지원하고 있습니다.</p>
 						<p>현재 svg font를 지원하는 브라우저는 Safari와 iOS Safari만 유일합니다.</p>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_ms">
 						<strong class="mb_sm">임베디드 오픈 타입 글꼴(Embedded OpenType Fonts, EOT)</strong>
 						<p>임베디드 오픈 타입 글꼴은 Microsoft가 웹 페이지에서 사용하기 위해 개발한 내장형 글꼴로, 오픈 타입 글꼴입니다.</p>
 						<p>IE8 이하 버전은 @font-face를 사용할 때 .eot 파일만 인식합니다.</p>
@@ -115,7 +115,7 @@
 					<li class="safari">3.1</li>
 				</ul>
 			</aside>
-			<aside class="browser_support mt_s" data-tit="WOFF">
+			<aside class="browser_support mt_ms" data-tit="WOFF">
 				<ul>
 					<li class="ie">9+</li>
 					<li class="edge">12.0</li>
@@ -125,7 +125,7 @@
 					<li class="safari">5.1</li>
 				</ul>
 			</aside>
-			<aside class="browser_support mt_s" data-tit="WOFF2">
+			<aside class="browser_support mt_ms" data-tit="WOFF2">
 				<ul>
 					<li class="ie false">지원안함</li>
 					<li class="edge">14.0</li>
@@ -135,7 +135,7 @@
 					<li class="safari">12.0</li>
 				</ul>
 			</aside>
-			<aside class="browser_support mt_s" data-tit="SVG">
+			<aside class="browser_support mt_ms" data-tit="SVG">
 				<ul>
 					<li class="ie false">지원안함</li>
 					<li class="edge false">지원안함</li>
@@ -145,7 +145,7 @@
 					<li class="safari">3.2</li>
 				</ul>
 			</aside>
-			<aside class="browser_support mt_s" data-tit="EOT">
+			<aside class="browser_support mt_ms" data-tit="EOT">
 				<ul>
 					<li class="ie">6~8</li>
 					<li class="edge">12.0</li>
@@ -177,7 +177,7 @@
 		<!-- 3.8.2. CSS3 @font-face 규칙 속성 -->
 		<section class="txt_ex indent mt_xxl">
 			<h2 class="ml_mn">3.8.2. CSS3 @font-face 규칙 속성</h2>
-			<div class="uk_gist_code_box mt_ms" data-tit="@font-face">
+			<div class="uk_gist_code_box mt_m" data-tit="@font-face">
 				<textarea readonly="readonly">
 					/* 아래 속성을 모두 적용 한 예제 */
 					@font-face {
@@ -197,12 +197,12 @@
 			</div>
 
 			<!-- font-family -->
-			<article class="indent mt_l">
+			<article class="indent mt_xl">
 				<h3 class="ml_mn t_blue">font-family</h3>
 				<p class="mt_s">
 					필수적이며, 글꼴의 이름을 설정합니다.
 				</p>
-				<div class="uk_gist_code_box mt_s" data-tit="@font-face [font-family]">
+				<div class="uk_gist_code_box mt_ms" data-tit="@font-face [font-family]">
 					<textarea readonly="readonly">
 						@font-face {
 							font-family: '적용할 폰트 이름 지정';
@@ -212,13 +212,13 @@
 			</article>
 
 			<!-- src -->
-			<article class="indent mt_l">
+			<article class="indent mt_xl">
 				<h3 class="ml_mn t_blue">src</h3>
 				<p class="mt_s">
 					필수적이며, 글꼴 파일의 주소를 설정합니다.<br>
 					권장은 항상 글꼴 URL에 소문자를 사용해야 하며. 대문자로 사용할 경우 IE에서 예기치 않은 결과를 줄 수 있습니다.
 				</p>
-				<div class="uk_gist_code_box mt_s" data-tit="@font-face [src]">
+				<div class="uk_gist_code_box mt_ms" data-tit="@font-face [src]">
 					<textarea readonly="readonly">
 						@font-face {
 							src: url('적용할 폰트 경로/폰트명') format('폰트 포멧');
@@ -228,12 +228,12 @@
 			</article>
 
 			<!-- font-weight -->
-			<article class="indent mt_l">
+			<article class="indent mt_xl">
 				<h3 class="ml_mn t_blue">font-weight</h3>
 				<p class="mt_s">
 					선택적이며, 글꼴의 굵기를 설정합니다. 기본값은 "normal"입니다.<br>
 				</p>
-				<div class="uk_gist_code_box mt_s" data-tit="@font-face [font-weight]">
+				<div class="uk_gist_code_box mt_ms" data-tit="@font-face [font-weight]">
 					<textarea readonly="readonly">
 						@font-face {
 							font-weight: normal | bold | 100 | 200 | 300 | 400 | 500 | 600 | 700 | 800 | 900;
@@ -243,12 +243,12 @@
 			</article>
 
 			<!-- font-stretch -->
-			<article class="indent mt_l">
+			<article class="indent mt_xl">
 				<h3 class="ml_mn t_blue">font-stretch</h3>
 				<p class="mt_s">
 					선택적이며, 글꼴의 크기가 늘어나는 방법을 설정합니다. 기본값은 "normal"입니다.<br>
 				</p>
-				<div class="uk_gist_code_box mt_s" data-tit="@font-face [font-stretch]">
+				<div class="uk_gist_code_box mt_ms" data-tit="@font-face [font-stretch]">
 					<textarea readonly="readonly">
 						@font-face {
 							font-stretch : normal | condensed | ultra-condensed | extra-condensed | semi-condensed | expanded | semi-expanded | extra-expanded | ultra-expanded;
@@ -258,12 +258,12 @@
 			</article>
 
 			<!-- font-style -->
-			<article class="indent mt_l">
+			<article class="indent mt_xl">
 				<h3 class="ml_mn t_blue">font-style</h3>
 				<p class="mt_s">
 					선택적이며, 글꼴의 스타일을 설정합니다. 기본값은 "normal"입니다.<br>
 				</p>
-				<div class="uk_gist_code_box mt_s" data-tit="@font-face [font-style]">
+				<div class="uk_gist_code_box mt_ms" data-tit="@font-face [font-style]">
 					<textarea readonly="readonly">
 						@font-face {
 							font-style : normal | italic | oblique;
@@ -273,7 +273,7 @@
 			</article>
 
 			<!-- unicode-range -->
-			<article class="indent mt_l">
+			<article class="indent mt_xl">
 				<h3 class="ml_mn t_blue">unicode-range</h3>
 				<p class="mt_s">
 					선택적이며, 글꼴이 지원하는 유니코드 문자의 범위를 설정합니다. 기본값은 <code>U+0-10FFFF</code>입니다.<br>
@@ -287,7 +287,7 @@
 					수많은 유니 코드 옵션이 있는데 기본 라틴어 (0020—007F)는 영어 사이트에서 가장 일반적인 범위 일 수 있지만
 					<span class="reference mt_l"><a href="https://unicode-table.com/en/" target="_blank" title="새창열림">unicode-table.com</a></span> 에서 사용 가능한 유니코드를 참조햐여 사용할 수 있습니다.
 				</p>
-				<div class="uk_gist_code_box mt_s" data-tit="@font-face [unicode-range]">
+				<div class="uk_gist_code_box mt_ms" data-tit="@font-face [unicode-range]">
 					<textarea readonly="readonly">
 						@font-face {
 							unicode-range:
@@ -336,13 +336,13 @@
 			</article>
 
 			<!-- font-display -->
-			<article class="indent mt_l">
+			<article class="indent mt_xl">
 				<h3 class="ml_mn t_blue">font-display</h3>
 				<p class="mt_s">
 					CSS의 font-display 속성을 사용하면 외부 라이브러리를 사용하지 않아도 웹 폰트의 로딩 상태에 따른 동작을 설정할 수 있습니다.<br>
 					현재 IE는 지원하지 않습니다.<br>
 				</p>
-				<div class="uk_gist_code_box mt_s" data-tit="@font-face [font-display]">
+				<div class="uk_gist_code_box mt_ms" data-tit="@font-face [font-display]">
 					<textarea readonly="readonly">
 						@font-face {
 							font-display : auto | block | swap | fallback | optional;
@@ -355,7 +355,7 @@
 							<strong class="mb_sm">auto</strong>
 							<p>브라우저의 기본 동작</p>
 						</li>
-						<li class="line_code font14 mt_sm">
+						<li class="line_code font14 mt_ms">
 							<strong class="mb_sm">block</strong>
 							<p>FOIT 방식(Flash Of Invisible Text)와 동일하게 작동하는 옵션입니다.</p>
 							<p>웹 폰트가 로딩되지 않았을 때는 텍스트를 렌더링하지 않습니다(최대 3초).</p>
@@ -365,7 +365,7 @@
 								<figcaption>[font-display : block 작동 방식]</figcaption>
 							</figure>
 						</li>
-						<li class="line_code font14 mt_sm">
+						<li class="line_code font14 mt_ms">
 							<strong class="mb_sm">swap</strong>
 							<p>FOUT 방식(Flash Of Unstyled Text)와 동일하게 작동하는 옵션입니다.</p>
 							<p>우선 폴백 폰트로 글자를 렌더링하고, 웹 폰트 로딩이 완료되면 웹 폰트를 적용합니다.</p>
@@ -375,7 +375,7 @@
 								<figcaption>[font-display : swap 작동 방식]</figcaption>
 							</figure>
 						</li>
-						<li class="line_code font14 mt_sm">
+						<li class="line_code font14 mt_ms">
 							<strong class="mb_sm">fallback</strong>
 							<p>fallback 옵션을 사용하면 우선 100ms 동안 텍스트가 보이지 않고, 그 후 폴백 폰트로 렌더링합니다.</p>
 							<p>특이한 점은 약 2초의 전환(swap) 시간이 있다는 점입니다. 이 시간 안에 로딩이 완료되면 웹 폰트로 전환합니다.</p>
@@ -383,7 +383,7 @@
 							<p>전환 시간 이후에 다운로드된 웹 폰트는 웹 페이지에 적용되지는 않지만 캐시에는 저장됩니다.</p>
 							<p>그래서 추후에 사용자가 다시 방문했을 때 바로 웹 폰트가 적용된다는 장점이 있습니다.</p>
 						</li>
-						<li class="line_code font14 mt_sm">
+						<li class="line_code font14 mt_ms">
 							<strong class="mb_sm">optional</strong>
 							<p>optional 옵션은 fallback 옵션과 비슷하지만 다르게 작동하는 옵션입다.</p>
 							<p>우선 100ms 동안 텍스트가 보이지 않고 그 후 폴백 폰트로 전환합니다.</p>
@@ -438,26 +438,26 @@
 						<p>웹 폰트 로딩이 완료되면 텍스트를 웹 폰트로 전환합니다. 이 방식은 웹 폰트 로딩 여부에 관계없이 텍스트가 항상 보이는 장점이 있습니다.</p>
 						<p>하지만 글꼴의 자간, 높이 등 서식이 달라 웹 폰트 적용 전과 후에 레이아웃이 변경될 수 있습니다.</p>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_ms">
 						<strong class="mb_sm">FOIT 방식(Flash Of Invisible Text)의 브라우저</strong>
 						<p>Firefox와 Chrome 등의 브라우저는 웹 폰트가 로딩되기 전까지 해당 텍스트를 화면에 보여 주지 않습니다.</p>
 						<p>웹 폰트 로딩이 완료되면 텍스트를 웹 폰트로 전환합니다.</p>
 						<p>한 번에 웹 폰트를 보여줄 수 있다는 장점이 있지만, 웹 폰트의 로딩이 늦으면 Mitt Romney 기사의 사례처럼 빈 텍스트가 노출되는 문제점이 있습니다.</p>
 						<p>웹 폰트가 로딩되지 않은 상태로 3초가 지나면 폴백 폰트로 우선 렌더링해서 브라우저 자체적으로 웹 폰트의 로딩 시간이 과도하게 오래 걸리는 상황에 대비합니다.</p>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_ms">
 						<strong class="mb_sm">FOUT 방식(Flash Of Unstyled Text)을 사용한 최적화</strong>
 						<P>FOIT 방식(Flash Of Invisible Text)은 Mitt Romney 사례와 같이 텍스트가 보이지 않는 문제가 있기 때문에 UX 관점에서 좋지 않습니다.</p>
 						<P>그러므로 모든 브라우저에서 FOIT 방식이 아닌 FOUT 방식으로 작동하게 한다면 텍스트가 보이지 않는 문제를 해결할 수 있습니다.</p>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_ms">
 						<strong class="mb_sm">font-display 속성을 사용한 최적화</strong>
 						<p>텍스트가 항상 보이게 하려면 FOUT와 동일하게 작동하는 swap 옵션을 사용합니다.</p>
 						<p>fallback 옵션과 optional 옵션을 사용하면 100ms 동안 텍스트가 보이지 않지만 매우 짧은 시간이어서 이 옵션들도 최적화에 사용할 수 있습니다.</p>
 						<p>font-display 속성은 Internet Explorer 계열 브라우저를 제외한 브라우저가 지원합니다.</p>
 						<p>텍스트가 보이지 않는 문제가 발생하는 브라우저에서는 문제없이 최적화에 font-display 속성을 사용할 수 있습니다.</p>
 					</li>
-					<li class="line_code font14 mt_s">
+					<li class="line_code font14 mt_ms">
 						<strong class="mb_sm">각 브라우저 동작 방식</strong>
 						<p>크롬과 파이어폭스의 (+ 사파리) 경우는 FOIT 방식(Flash Of Invisible Text)입니다.</p>
 						<p>
@@ -478,14 +478,14 @@
 			</div>
 		</section>
 
-		<section class="view_editor edit_code mt_l" data-target="css/step02/3.8.font-face/3.8.font-face.html">
+		<section class="view_editor edit_code mt_xxl" data-target="css/step02/3.8.font-face/3.8.font-face.html">
 			<h3 class="ve_tit">font-face 예제</h3>
 			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</section>
 
-		<aside class="browser_support mt_l" data-tit="@font-face">
+		<aside class="browser_support mt_xxl" data-tit="@font-face">
 			<ul>
 				<li class="ie">9+</li>
 				<li class="edge">12.0</li>
@@ -496,7 +496,7 @@
 			</ul>
 		</aside>
 
-		<aside class="reference_box mt_l">
+		<aside class="reference_box mt_xxl">
 			<h2 class="tit">@규칙(At-Rule) 참조</h2>
 			<ul class="link_lst">
 				<li class="reference"><a href="https://www.w3.org/TR/css-fonts-3/#font-face-rule" target="_blank" class="fas" title="새창열림">W3C CSS Fonts Module Level 3</a></li>
