--- a/assets/02-css/03-cssMiddleclass/09-css_media_part2.html
+++ b/assets/02-css/03-cssMiddleclass/09-css_media_part2.html
@@ -49,9 +49,9 @@
 		</p>
 
 		<!-- 기본적인 미디어 쿼리 사용 -->
-		<article class="mt_m indent">
+		<article class="indent mt_l">
 			<h3 class="t_blue ml_mn">기본적인 미디어 쿼리 사용</h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				뷰포트의 너비가 480px이거나 그 이하일 경우에는 배경색을 <span style="color:#fff; background:darkorange;">darkorange</span>로 표현해 줍니다.<br>
 				하지만 뷰포트의 너비가 그 초과일 경우에는 배경색을 <span style="color:#000; background:lightblue;">lightblue</span>로 바꿔서 표현해 줍니다.
 			</p>
@@ -66,9 +66,9 @@
 		</article>
 
 		<!-- 브라우저, 프린터 용도 분기 -->
-		<article class="mt_l indent">
+		<article class="indent mt_xl">
 			<h3 class="t_blue ml_mn">브라우저, 프린터 용도 분기</h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				다음 예제를 웹 브라우저에서 실행하면 배경색을 검정색으로, 텍스트의 색상은 흰색으로 표현합니다.<br>
 				하지만 웹 페이지를 프린트하게 되면 배경색을 흰색으로, 텍스트의 색상을 검정색으로 바꿔서 프린트합니다.
 			</p>
@@ -85,9 +85,9 @@
 		</article>
 
 		<!-- Device 별 사이즈 -->
-		<article class="mt_l indent">
+		<article class="indent mt_xl">
 			<h3 class="t_blue ml_mn">Device 별 사이즈</h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				일반적으로 사용하는 device별 미디어 쿼리 사이즈 입니다.
 			</p>
 			<div class="uk_gist_code_box mt_ms" data-tit="@media query [code template]">
@@ -134,9 +134,9 @@
 		</article>
 
 		<!-- Mobile First 반응형 웹 -->
-		<article class="mt_l indent">
+		<article class="indent mt_xl">
 			<h3 class="t_blue ml_mn">Mobile First 반응형 웹</h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				Mobile부터 시작 하여 Tablet, Desktop으로 변화하는 반응형 웹의 미디어 쿼리 템플릿 입니다.
 			</p>
 			<div class="uk_gist_code_box mt_ms" data-tit="@media query [code template]">
@@ -162,9 +162,9 @@
 		</article>
 
 		<!-- Desktop First 반응형 웹 -->
-		<article class="mt_l indent">
+		<article class="indent mt_xl">
 			<h3 class="t_blue ml_mn">Desktop First 반응형 웹</h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				Desktop부터 시작 하여 Tablet, Mobile으로 변화하는 반응형 웹의 미디어 쿼리 템플릿 입니다.
 			</p>
 			<div class="uk_gist_code_box mt_ms" data-tit="@media query [code template]">
@@ -190,9 +190,9 @@
 		</article>
 
 		<!-- IOS 계열 CSS(@media) 반응형 웹 -->
-		<article class="mt_l indent">
+		<article class="indent mt_xl">
 			<h3 class="t_blue ml_mn">IOS 계열 CSS(@media)</h3>
-			<p class="mt_sm">
+			<p class="mt_s">
 				Apple사의 여러 기기에 상세히 대응할 수 있는 @media 템플릿 입니다.
 			</p>
 
@@ -390,7 +390,7 @@
 		</figure>
 
 		<!-- 반응형 웹(Responsive Web) -->
-		<article class="indent_max mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">반응형 웹(Responsive Web)</h3>
 			<blockquote class="uk_note mt_m" role="note">
 				<h4 class="sound_only">요약 설명</h4>
@@ -416,7 +416,7 @@
 		</article>
 
 		<!-- 적응형 웹(Adaptive Web) -->
-		<article class="indent_max mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">적응형 웹(Adaptive Web)</h3>
 			<blockquote class="uk_note mt_m" role="note">
 				<h4 class="sound_only">요약 설명</h4>
@@ -446,7 +446,7 @@
 		</article>
 
 		<!-- 반응형 웹과 적응형 웹의 특징 비교 -->
-		<article class="indent_max mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">반응형 웹과 적응형 웹의 특징 비교</h3>
 			<div class="ol_lst mt_ms">
 				<ol>
@@ -475,7 +475,7 @@
 		</article>
 
 		<!-- 모바일 퍼스트 디자인(Mobile First Design) -->
-		<article class="indent_max mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">모바일 퍼스트 디자인(Mobile First Design)</h3>
 			<p class="mt_s">
 				모바일 퍼스트 디자인이란, 처음 웹 어플리케이션을 구축하는 단계에서부터 모바일 중심으로 구축하는 것을 의미합니다.
@@ -546,7 +546,7 @@
 		</article>
 
 		<!-- 데스크탑 퍼스트가 모바일 퍼스트에 비해 가질 수 있는 장점과 단점 -->
-		<article class="indent_max mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">데스크탑 퍼스트가 모바일 퍼스트에 비해 가질 수 있는 장점과 단점</h3>
 			<div class="ol_lst mt_ms">
 				<ol>
@@ -576,7 +576,7 @@
 		</article>
 
 		<!-- 반응형 웹페이지에서 사용되는 대부분의 레이아웃의 5가지 패턴 요약 -->
-		<article class="indent_max mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">반응형 웹페이지에서 사용되는 대부분의 레이아웃의 5가지 패턴 요약</h3>
 			<div class="ol_lst mt_ms">
 				<p>
