--- a/assets/02-css/04-cssAdvanced/04-css_flexible_part3.html
+++ b/assets/02-css/04-cssAdvanced/04-css_flexible_part3.html
@@ -18,7 +18,7 @@
 		</figure>
 
 		<!-- flex-grow -->
-		<article class="mt_xxl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">flex-grow</h3>
 			<p class="mt_ms">
 				flex-grow CSS property 는 <code>flex-item</code> 요소가, <code>flex-container</code> 요소 내부에서 할당 가능한 공간의 정도를 선언합니다.<br>
@@ -84,7 +84,7 @@
 		</article>
 
 		<!-- flex-shrink -->
-		<article class="mt_xxl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">flex-shrink</h3>
 			<p class="mt_ms">
 				<code>flex item</code>의 너비에 대한 축소 인자(flex shrink factor)를 지정합니다.<br>
@@ -161,7 +161,7 @@
 		</article>
 
 		<!-- flex-basis -->
-		<article class="mt_xxl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">flex-basis</h3>
 			<p class="mt_ms">
 				flex-basis CSS 속성은 플렉스 아이템의 초기 크기를 지정합니다. <code>box-sizing</code>을 따로 지정하지 않는다면 콘텐츠 박스의 크기를 변경합니다.<br>
@@ -238,7 +238,7 @@
 		</article>
 
 		<!-- flex -->
-		<article class="mt_xxl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">flex</h3>
 			<p class="mt_ms">
 				<mark>W3C에서는 이 속성을 사용하는 것 보다 개별적으로 기술하는 것을 추천하고 있습니다.</mark>
@@ -420,7 +420,7 @@
 		</article>
 
 		<!-- align-self -->
-		<article class="mt_xxl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">align-self</h3>
 			<p class="mt_ms">
 				<code>align-self</code>는
@@ -467,7 +467,7 @@
 					<li class="safari">6.1</li>
 				</ul>
 			</aside>
-			<aside class="browser_support mt_s" data-tit="align-self : start | end | baseline">
+			<aside class="browser_support mt_ms" data-tit="align-self : start | end | baseline">
 				<ul>
 					<li class="ie false">지원안함</li>
 					<li class="edge false">지원안함</li>
@@ -477,7 +477,7 @@
 					<li class="safari false">지원안함</li>
 				</ul>
 			</aside>
-			<aside class="browser_support mt_s" data-tit="align-self : stretch">
+			<aside class="browser_support mt_ms" data-tit="align-self : stretch">
 				<ul>
 					<li class="ie false">지원안함</li>
 					<li class="edge false">지원안함</li>
@@ -490,7 +490,7 @@
 		</article>
 
 		<!-- order -->
-		<article class="mt_xxl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">order</h3>
 			<p class="mt_ms">
 				<code>flex item</code>의 배치 순서를 지정합니다.<br>
@@ -541,7 +541,7 @@
 		</article>
 
 		<!-- order -->
-		<article class="mt_xxl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">grow, shrink 숫자가 증가, 감소에 따라 계산방법</h3>
 			<p class="mt_ms">
 				플렉스 컨테이너 요소에 설정된 주축의 방향은 <code>row</code> 입니다.<br>
@@ -632,7 +632,7 @@
 		</p>
 
 		<!-- 수직 및 수평 가운데 정렬(Vertical and Horizontal Centering) -->
-		<article class="mt_l indent">
+		<article class="indent mt_l">
 			<h3 class="ml_mn t_blue">수직 및 수평 가운데 정렬(Vertical and Horizontal Centering)</h3>
 			<section class="view_editor edit_code mt_ms" data-target="/css/step03/4.4.flexible/4.4.3.flexible-demo-vertical-and-horizontal-centering.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -642,7 +642,7 @@
 		</article>
 
 		<!-- flex-direction, justify-content, align-items Demo -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">flex-direction, justify-content, align-items Demo</h3>
 			<section class="view_editor edit_code mt_ms" data-target="/css/step03/4.4.flexible/4.4.3.flexible-demo.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -652,7 +652,7 @@
 		</article>
 
 		<!-- Multi-Column Layout -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">Multi-Column Layout</h3>
 			<section class="view_editor edit_code mt_ms" data-target="/css/step03/4.4.flexible/4.4.3.flexible-demo-multi-column-layout.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -662,7 +662,7 @@
 		</article>
 
 		<!-- 네이비게션 -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">네이비게션</h3>
 			<section class="view_editor edit_code mt_ms" data-target="/css/step03/4.4.flexible/4.4.3.flexible-demo-navigation.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -671,6 +671,7 @@
 			</section>
 		</article>
 	</section>
+
 
 	<aside class="reference_box mt_xxl">
 		<h2 class="tit">플렉서블 박스 레이아웃 참조</h2>
