--- a/assets/02-css/04-cssAdvanced/05-css_grid_part3.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part3.html
@@ -10,7 +10,7 @@
 		<h2 class="ml_mn">4.5.5. 부모 속성(properties for the parent - grid container)</h2>
 
 		<!-- 4.5.5.1. grid 컨테이너 -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn">4.5.5.1. grid 컨테이너</h3>
 			<p class="mt_ms">
 				그리드 컨테이너는 <code>display</code> 속성을 사용해 설정할 수 있습니다.<br>
@@ -54,7 +54,7 @@
 		</article>
 
 		<!-- 4.5.5.2. grid 템플릿 행/열 -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn">4.5.5.2. grid 템플릿 행/열</h3>
 			<p class="mt_ms">
 				공백으로 구분된 값 리스트를 해석하여 그리드 행(row), 열(column)을 설정합니다.<br>
@@ -395,7 +395,7 @@
 		</article>
 
 		<!-- 4.5.5.3. grid 템플릿 영역 -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn">4.5.5.3. grid 템플릿 영역</h3>
 			<p class="mt_ms">
 				<code>grid-area</code> 속성으로 설정된 그리드 영역의 이름을 참조하여, 그리드 템플릿 영역을 설정할 수 있습니다.<br>
@@ -467,7 +467,7 @@
 		</article>
 
 		<!-- 4.5.5.4. grid 템플릿 속기형 -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn">4.5.5.4. grid 템플릿 속기형</h3>
 			<p class="mt_ms">그리드 템플릿 행 / 열 / 영역 이름 설정을 속기형(shorthand)으로 설정 가능합니다.</p>
 
@@ -583,7 +583,7 @@
 		</article>
 
 		<!-- 4.5.5.5. grid 트랙 크기 자동 설정 -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn">4.5.5.5. grid 트랙 크기 자동 설정</h3>
 
 			<h4 class="mt_m">그리드 행/열 트랙 크기 자동 설정</h4>
@@ -705,7 +705,7 @@
 		</article>
 
 		<!-- 4.5.5.6. grid 자동 흐름 설정 -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn">4.5.5.6. grid 자동 흐름 설정</h3>
 			<p class="mt_ms">
 				그리드에 명시적으로 배치(레이아웃) 되지 않은 아이템이 있을 경우, 자동 배치 알고리즘이 실행되어 자동으로 배치 되도록 설정할 수 있습니다.<br>
@@ -767,7 +767,7 @@
 		</article>
 
 		<!-- 4.5.5.7. grid 속기형 속성 -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn">4.5.5.7. grid 속기형 속성</h3>
 			<blockquote class="uk_note mt_m" role="note">
 				<h4 class="sound_only">요약 설명</h4>
@@ -945,7 +945,7 @@
 		</article>
 
 		<!-- 4.5.5.8. grid 거터 -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn">4.5.5.8. grid 거터</h3>
 			<p class="mt_ms">
 				그리드 라인(행/열) 사이 간격(gap)을 조정합니다.<br>
@@ -1062,7 +1062,7 @@
 		</article>
 
 		<!-- 4.5.5.9. grid 콘텐츠(content) 정렬 -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn">4.5.5.9. grid 콘텐츠(content) 정렬</h3>
 
 			<!-- align-content -->
@@ -1356,7 +1356,7 @@
 		</article>
 
 		<!-- 4.5.5.10. grid 아이템(items) 정렬 -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn">4.5.5.10. grid 아이템(items) 정렬</h3>
 
 			<!-- align-items -->
