--- a/assets/02-css/04-cssAdvanced/05-css_grid_part5.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part5.html
@@ -450,7 +450,7 @@
 		<h2 class="ml_mn">4.5.8. grid layout demo</h2>
 
 		<!-- grid layout -->
-		<article class="view_editor edit_code mt_ml" data-target="css/step03/4.5.grid/4.5.grid-layout.html">
+		<article class="view_editor edit_code mt_l" data-target="css/step03/4.5.grid/4.5.grid-layout.html">
 			<h3 class="ve_tit">grid layout</h3>
 			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
@@ -458,7 +458,7 @@
 		</article>
 
 		<!-- grid-auto-flow with out dense -->
-		<article class="view_editor edit_code mt_l" data-target="css/step03/4.5.grid/4.5.grid-layout-normal.html">
+		<article class="view_editor edit_code mt_xl" data-target="css/step03/4.5.grid/4.5.grid-layout-normal.html">
 			<h3 class="ve_tit">grid-auto-flow with out dense</h3>
 			<div class="uk_editor indent min-height-700" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
@@ -466,7 +466,7 @@
 		</article>
 
 		<!-- grid-auto-flow: dense -->
-		<article class="view_editor edit_code mt_l" data-target="css/step03/4.5.grid/4.5.grid-layout-auto-flow-dense.html">
+		<article class="view_editor edit_code mt_xl" data-target="css/step03/4.5.grid/4.5.grid-layout-auto-flow-dense.html">
 			<h3 class="ve_tit">grid-auto-flow: dense</h3>
 			<div class="uk_editor indent min-height-700" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
@@ -474,7 +474,7 @@
 		</article>
 
 		<!-- grid-based 3-column layout with 2-column option -->
-		<article class="view_editor edit_code mt_l" data-target="css/step03/4.5.grid/4.5.grid-layout-3-column.html">
+		<article class="view_editor edit_code mt_xl" data-target="css/step03/4.5.grid/4.5.grid-layout-3-column.html">
 			<h3 class="ve_tit">grid-based 3-column layout with 2-column option</h3>
 			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
@@ -482,7 +482,7 @@
 		</article>
 
 		<!-- Creating CSS Grid 소개 영상 (한글 자막) -->
-		<article class="mt_l">
+		<article class="mt_xl">
 			<h3 class="t_blue">Creating CSS Grid 소개 영상 (한글 자막)</h3>
 			<div class="grid_info_mv indent mt_ms">
 				<iframe src="https://cdn.iframe.ly/XrMuzzm" allowfullscreen="" scrolling="no" allow="encrypted-media *; accelerometer; gyroscope; picture-in-picture" title="Creating CSS Grid 소개 영상 (한글 자막)"></iframe>
