--- a/assets/02-css/02-cssBeginner/09-css_boxmodel.html
+++ b/assets/02-css/02-cssBeginner/09-css_boxmodel.html
@@ -1026,7 +1026,7 @@
 			<p class="mt_s">
 				상단 좌측, 상단 우측, 하단 우측, 하단 좌측의 속성을 한번에 축약하여 지정할 수 있습니다.
 			</p>
-			<div class="uk_gist_code_box mt_s" data-tit="border-radius shorthand">
+			<div class="uk_gist_code_box mt_ms" data-tit="border-radius shorthand">
 				<textarea readonly="readonly">
 					div {
 						/* 아래의 예제는 모두 같은 결과를 나타냅니다. */
