--- a/assets/02-css/02-cssBeginner/10-css_effects.html
+++ b/assets/02-css/02-cssBeginner/10-css_effects.html
@@ -20,7 +20,7 @@
 	<!-- overflow 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">overflow</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			요소의 내용이 너무 커서 지정한 영역에 맞지 않을 때 내용을 클립할지(자를지) 또는 스크롤 막대를 추가할지 여부를 지정합니다.<br>
 			overflow 속성은 지정된 높이의 블록 요소에 대해서만 작동합니다.<br>
 			overflow 속성은 overflow-x 속성과 overflow-y 속성으로 구분지어 사용할 수 있습니다.
@@ -32,7 +32,7 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">visible</strong> : 기본값으로 내용(Content)이 잘리지 않으며, 컨텐트 박스(Content box) 영역을 벗어나서 렌더링 될 수도 있습니다.</li>
 				<li><strong class="t_black">hidden</strong> : 필요하다면 컨텐트 박스에 맞게 내용이 잘립니다. 스크롤 바가 제공되진 않습니다.</li>
@@ -60,7 +60,7 @@
 	<!-- visibility 속성 -->
 	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn"><i class="t_blue">visibility</i> 속성</h2>
-		<p class="mt_s">
+		<p class="mt_ms">
 			문서의 레이아웃을 변경하지 않고 요소를 보이거나 숨깁니다. visibility로 <code>&lt;table&gt;</code>의 행이나 열을 숨길 수도 있습니다.<br>
 			문서를 숨기고, 레이아웃에서도 제외하려면, visibility를 사용하는 대신 display 속성을 none으로 설정합니다.
 		</p>
@@ -71,13 +71,13 @@
 				}
 			</textarea>
 		</div>
-		<div class="ol_lst mt_ms">
+		<div class="ol_lst indent mt_ms">
 			<ol>
 				<li><strong class="t_black">visible</strong> : 기본값으로 해당 요소를 보이게 한다.</li>
 				<li><strong class="t_black">hidden</strong> : 해당 요소를 보이지 않게 한다. display: none;은 해당 요소의 공간까지 사라지게 하지만 visibility: hidden;은 해당 요소의 공간은 사라지지 않고 남아있게 된다.</li>
 				<li>
 					<strong class="t_black">collapse</strong> : table 요소에 사용하며 행이나 열을 보이지 않게 한다. IE10+ 부터 지원.
-					<div class="line_code mt_sm">
+					<div class="line_code mt_s">
 						<p>
 							<code>&lt;table&gt;</code>의 행, 열, 행 그룹과 열 그룹에 적용하면 display를 none으로 설정한 것과 동일하게 요소를 숨기고 차지하던 공간도 제거합니다.<br>
 							그러나 다른 행(열)의 크기는 collapse를 적용한 행(열)이 보이는 것 처럼 취급해 계산합니다.<br>
@@ -106,7 +106,8 @@
 		</aside>
 	</section>
 
-	<section class="reference_box mt_l">
+
+	<section class="reference_box mt_xxl">
 		<h2 class="tit">시각적인 속성 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="https://www.w3.org/TR/2011/REC-CSS2-20110607/visufx.html" target="_blank" class="fas" title="새창열림">3C Visual effects</a></li>
