--- a/assets/02-css/03-cssMiddleclass/03-css_counter.html
+++ b/assets/02-css/03-cssMiddleclass/03-css_counter.html
@@ -48,7 +48,7 @@
 	</div>
 
 	<!-- counter-reset 속성 -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">counter-reset 속성</h2>
 		<p class="mt_s">
 			카운터를 사용하려면, <code>counter-reset</code>으로 먼저 카운터 이름과 시작값을 설정 해야 합니다.<br>
@@ -88,7 +88,7 @@
 	</section>
 
 	<!-- counter-increment 속성 -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">counter-increment 속성</h2>
 		<p class="mt_s">
 			<code>counter-reset</code>으로 설정한 값을 증가 또는 감소시키는 역할을 합니다.<br>
@@ -125,7 +125,7 @@
 	</section>
 
 	<!-- counter() 문법 -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">counter() 문법</h2>
 		<p class="mt_s">
 			<code>counter(name, style)</code><br>
@@ -185,7 +185,7 @@
 	</section>
 
 	<!-- counters() 문법 -->
-	<section class="txt_ex indent mt_l">
+	<section class="txt_ex indent mt_xxl">
 		<h2 class="ml_mn">counters() 문법</h2>
 		<p class="mt_s">
 			<code>counters(name, string, style)</code><br>
@@ -231,8 +231,8 @@
 	</section>
 
 
-	<section class="view_editor edit_code mt_l" data-target="css/step02/3.3.counter/3.3.counter.html">
-		<h2 class="ve_tit">예제</h2>
+	<section class="view_editor edit_code mt_xxl" data-target="css/step02/3.3.counter/3.3.counter.html">
+		<h2 class="ve_tit">counters() 예제</h2>
 		<div class="uk_editor indent min-height-500" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
@@ -242,7 +242,7 @@
 		</figure>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="counter">
+	<aside class="browser_support mt_xxl" data-tit="counter">
 		<ul>
 			<li class="ie">8+</li>
 			<li class="edge">12.0</li>
@@ -253,7 +253,7 @@
 		</ul>
 	</aside>
 
-	<aside class="reference_box mt_l">
+	<aside class="reference_box mt_xxl">
 		<h2 class="tit">CSS 카운터 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="https://www.w3.org/TR/css-content-3/" target="_blank" class="fas" title="새창열림">CSS Generated Content Module Level 3</a></li>
