--- a/assets/02-css/03-cssMiddleclass/05-css_ir.html
+++ b/assets/02-css/03-cssMiddleclass/05-css_ir.html
@@ -42,14 +42,14 @@
 	</section>
 
 	<!-- Daum CSS Convention -->
-	<section class="txt_ex mt_xxl">
-		<h2>Daum CSS Convention</h2>
-		<p class="mt_s">- 아래 방법은 <i class="underline">Daum CSS Convention</i>에서 명시한 방법입니다.</p>
+	<section class="txt_ex indent mt_xxl">
+		<h2 class="ml_mn">Daum CSS Convention</h2>
+		<p class="mt_ms">아래 방법은 <i class="underline">Daum CSS Convention</i>에서 명시한 방법입니다.</p>
 
 		<!-- Phark Method (권장) -->
 		<article class="indent_max mt_l">
 			<h3 class="ml_mn"><i class="t_blue">Phark Method</i> (권장)</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이미지로 대체할 엘리먼트에 배경이미지를 설정하고 글자는 <code>text-indent</code>를 이용하여 화면 바깥으로(<code>-9999px</code>만큼 내어 쓰기) 빼내어 보이지 않게 하는 방법입니다.
 			</p>
 			<div class="ol_lst indent mt_ms">
@@ -88,9 +88,9 @@
 		</article>
 
 		<!-- WA IR (권장) -->
-		<article class="indent_max mt_l">
+		<article class="indent_max mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">WA IR</i> (권장)</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이미지로 대체할 엘리먼트에 배경이미지를 설정하고 글자는 <code>&lt;span&gt;</code>태그로 감싼 후 <code>position:relative; z-index:-1</code>을 이용하여 화면에 안보이게 처리합니다.
 			</p>
 			<div class="ol_lst indent mt_ms">
@@ -132,9 +132,9 @@
 		</article>
 
 		<!-- Farhner Image Replacement -->
-		<article class="indent_max mt_l">
+		<article class="indent_max mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">Farhner Image Replacement</i></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이미지로 대체할 엘리먼트에 배경이미지를 설정하고 글자는 <code>&lt;span&gt;</code>태그로 감싼 후 <code>display:none</code> 을 이용하여 화면에 안보이게 처리합니다.
 			</p>
 			<div class="ol_lst indent mt_ms">
@@ -176,9 +176,9 @@
 		</article>
 
 		<!-- Dwyer Method -->
-		<article class="indent_max mt_l">
+		<article class="indent_max mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">Dwyer Method</i></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이미지로 대체할 엘리먼트에 배경이미지를 설정하고 글자는 <code>&lt;span&gt;</code>태그로 감싼 후 <code>width, height</code>를 각각 0으로 하여 글자를 숨기는 방법입니다.
 			</p>
 			<div class="ol_lst indent mt_ms">
@@ -220,9 +220,9 @@
 		</article>
 
 		<!-- Gilder/Levin Method -->
-		<article class="indent_max mt_l">
+		<article class="indent_max mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">Gilder/Levin Method</i></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이미지로 대체할 엘리먼트 내에 빈 <code>&lt;span&gt;</code>태그를 추가하여 배경이미지를 설정하고 <code>position:absolute</code> 스타일을 이용하여 글자를 덮는 방법압니다.
 			</p>
 			<div class="ol_lst indent mt_ms">
@@ -272,9 +272,9 @@
 		</article>
 
 		<!-- Leahy/Langridge Method -->
-		<article class="indent_max mt_l">
+		<article class="indent_max mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">Leahy/Langridge Method</i></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이미지로 대체할 엘리먼트에 배경이미지를 설정하고 <code>height: 0; padding-top: (이미지의 높이 값)</code>을 지정하여 글자를 밑으로 숨기는 방법입니다.<br>
 				<code>height: 0</code>으로 지정하여 글자를 숨기려면 반드시 <code>overflow: hidden</code>이 선언되어야 합니다.
 			</p>
@@ -316,9 +316,9 @@
 		</article>
 
 		<!-- span padding : applied Method -->
-		<article class="indent_max mt_l">
+		<article class="indent_max mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">span padding : applied Method</i></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				이미지로 대체할 엘리먼트에 배경이미지를 설정하고 글자는 <code>&lt;span&gt;</code>으로 감싼 후 블럭화하여 <code>padding-top</code>의 값을 이미지의 높이만큼 주어 글자를 밑으로 밀어내어 숨기는 방법입니다.
 			</p>
 			<div class="ol_lst indent mt_ms">
@@ -361,9 +361,9 @@
 		</article>
 
 		<!-- script replace Method -->
-		<article class="indent_max mt_l">
+		<article class="indent_max mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">script replace Method</i></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				자바스크립트를 이용하여 이미지로 대체할 엘리먼트의 텍스트를 <code>&lt;img&gt;</code>태그로 교체하는 방법입니다.
 			</p>
 			<div class="ol_lst indent mt_ms">
@@ -414,7 +414,7 @@
 		</article>
 	</section>
 
-	<aside class="reference_box mt_l">
+	<aside class="reference_box mt_xxl">
 		<h2 class="tit">IR 기법 참조</h2>
 		<ul class="link_lst">
 			<li class="reference"><a href="http://ui.daum.net/convention/css/css_ir" target="_blank" class="fas" title="새창열림">DAUM Web Standard Tech</a></li>
