--- a/assets/02-css/03-cssMiddleclass/06-css_module3_part1.html
+++ b/assets/02-css/03-cssMiddleclass/06-css_module3_part1.html
@@ -67,7 +67,7 @@
 		<!-- position: sticky 속성 -->
 		<article class="indent mt_l">
 			<h3 class="ml_mn"><i class="t_blue">position: sticky</i> 속성</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				safari 브라우저를 위한 <code>webkit</code> 접두어가 필요합니다.
 			</p>
 			<div class="uk_gist_code_box mt_s" data-tit="position: sticky">
@@ -124,7 +124,7 @@
 			</div>
 		</article>
 
-		<div class="view_editor edit_code mt_xxl" data-target="css/step02/3.6.css3-module/3.6.1.css3-position-sticky.html">
+		<div class="view_editor edit_code mt_xl" data-target="css/step02/3.6.css3-module/3.6.1.css3-position-sticky.html">
 			<h4 class="ve_tit">position: sticky 예제1</h4>
 			<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
@@ -154,7 +154,7 @@
 			</ul>
 		</aside>
 
-		<aside class="reference_box mt_l">
+		<aside class="reference_box mt_xl">
 			<h2 class="tit">sticky 참조</h2>
 			<ul class="link_lst">
 				<li class="reference"><a href="https://www.w3.org/TR/css-position-3/#sticky-pos" target="_blank" class="fas" title="새창열림">W3C CSS Positioned Layout Module Level 3</a></li>
@@ -176,7 +176,7 @@
 		<!-- border-image 속성 -->
 		<article class="indent mt_l">
 			<h3 class="ml_mn"><i class="t_blue">border-image</i> 속성</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>border-image</code>는 <code>border-image-source, border-image-slice, border-image-width, border-image-outset, border-image-repeat</code>의 단축 속성입니다.<br>
 				다른 단축 속성과 마찬가지로, 생략한 속성은 초기값으로 설정됩니다.
 			</p>
@@ -218,9 +218,9 @@
 		</article>
 
 		<!-- border-image-outset 속성 -->
-		<article class="indent mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">border-image-outset</i> 속성</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>border-image-outset</code> CSS 속성은 요소의 테두리 상자와 테두리 이미지의 거리를 설정합니다.<br>
 				<code>border-image-outset</code>으로 인해 요소 바깥에 그려지는 테두리로는 스크롤이 생기지 않으며 마우스 이벤트를 잡아낼 수도 없습니다.
 			</p>
@@ -264,9 +264,9 @@
 		</article>
 
 		<!-- border-image-repeat 속성 -->
-		<article class="indent mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">border-image-repeat</i> 속성</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>border-image-repeat</code> CSS 속성은 원본 이미지의 모서리 영역을 요소의 테두리 이미지 크기에 맞춰 조절할 때 사용할 방법을 지정합니다.<br>
 				<code>[ stretch | repeat | round | space ]{1,2}</code>
 			</p>
@@ -324,9 +324,9 @@
 		</article>
 
 		<!-- border-image-slice 속성 -->
-		<article class="indent mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">border-image-slice</i> 속성</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>border-image-slice</code> CSS 속성은 <code>border-image-source로</code> 설정한 이미지를 여러 개의 영역으로 나눕니다.<br>
 				이렇게 나눠진 영역이 요소의 테두리 이미지를 이룹니다.
 			</p>
@@ -384,9 +384,9 @@
 		</article>
 
 		<!-- border-image-source 속성 -->
-		<article class="indent mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">border-image-source</i> 속성</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>border-image-source</code> CSS 속성은 요소의 테두리 이미지로 사용할 원본 이미지를 지정합니다.
 			</p>
 			<div class="uk_gist_code_box mt_ms" data-tit="border-image-source">
@@ -420,9 +420,9 @@
 		</article>
 
 		<!-- border-image-width 속성 -->
-		<article class="indent mt_l">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">border-image-width</i> 속성</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>border-image-width</code> CSS 속성은 요소 테두리 이미지의 너비를 설정합니다.<br>
 				속성의 값이 <code>border-width</code>보다 크다면 테두리 이미지는 안쪽 여백(과 콘텐츠) 영역을 침범하여 그려집니다.
 			</p>
@@ -478,7 +478,7 @@
 		<!-- -webkit-line-clamp 속성 -->
 		<article class="indent mt_l">
 			<h3 class="ml_mn"><i class="t_blue">-webkit-line-clamp</i> 속성 <i class="fab fa-css3-alt"></i></h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				CSS Module Level 3<br>
 				여러 줄의 말줄임시 사용합니다. <mark>webkit 계열 브라우저에서만 작동</mark>합니다.
 			</p>
