--- a/assets/02-css/04-cssAdvanced/01-css_transform_part1.html
+++ b/assets/02-css/04-cssAdvanced/01-css_transform_part1.html
@@ -21,26 +21,27 @@
 			또한, 각 좌표축의 화살표 방향이 양의 방향이며, 반대쪽이 음의 방향을 가리킵니다.
 		</p>
 	</blockquote>
+
 	<div class="ol_lst indent_max mt_l">
 		<p class="ml_mn font-16 t_black weight-500">transform 속성은 HTML 요소에 대해 다음과 같은 동작을 제공합니다.</p>
-		<ol class="mt_s">
-			<li class="line_code font14">
+		<ol>
+			<li class="line_code font14 mt_ms">
 				<strong class="mb_sm">해당 요소의 크기를 변경합니다.</strong>
 				<p><code>scale(</code>확대/축소<code>) : scaleX(), scaleY(), scale(x, y)</code></p>
 			</li>
-			<li class="line_code font14 mt_s">
+			<li class="line_code font14 mt_ms">
 				<strong class="mb_sm">해당 요소를 기울입니다.</strong>
 				<p><code>skew(</code>비틀기,기울기<code>) : skewX(), skewY()</code></p>
 			</li>
-			<li class="line_code font14 mt_s">
+			<li class="line_code font14 mt_ms">
 				<strong class="mb_sm">해당 요소를 움직입니다.</strong>
 				<p><code>translate(</code>이동<code>) : translateX(), translateY(), translate(x, y)</code></p>
 			</li>
-			<li class="line_code font14 mt_s">
+			<li class="line_code font14 mt_ms">
 				<strong class="mb_sm">해당 요소를 회전시킵니다.</strong>
 				<p><code>rotate(</code>회전<code>) : rotateX(), rotateY(), rotate(x, y)</code></p>
 			</li>
-			<li class="line_code font14 mt_s">
+			<li class="line_code font14 mt_ms">
 				<strong class="mb_sm">해당 요소에 위의 네 가지 동작 중 원하는 동작들을 한 번에 적용시킵니다. <code>skew() = tan()</code></strong>
 				<p><code>matrix( scaleX(), tanY(), tanX(), scaleY(), translateX(), translateY() )</code></p>
 			</li>
@@ -122,7 +123,7 @@
 		</div>
 
 		<!-- transform 속성 -->
-		<article class="indent mt_xxl">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">transform</i> 속성</h3>
 			<div class="ol_lst mt_m">
 				<ol>
@@ -187,11 +188,11 @@
 							<code>x</code>, <code>y</code>축을 한번에 지정 가능하며, 한번에 지정할 경우 콤마(,)로 구분하여 사용하고,
 							<code>x</code>축, <code>y</code>축을 따로 명시하여 사용할 수 있습니다.
 						</p>
-						<figure class="img_figure mt_s">
+						<figure class="img_figure mt_ms">
 							<figcaption class="mt_0">[<code class="bg_none t_blue">skew()</code> 함수]</figcaption>
 							<img src="/ukncs/images/css/cssAdvanced/uxkm_transform-skew.svg" alt="skew() 함수" class="mt_m">
 						</figure>
-						<p class="mt_s">
+						<p class="mt_ms">
 							비틀기의 원리 예시로 가로 방향으로 비틀면 <code>x</code>축은 가만히 있고 <code>y</code>축이 비튼 각도만큼 회전하게 됩니다.<br>
 							다시 말해, <code>skewX()</code> 를 지정하면 <code>y</code>축이 회전하게 됩니다.<br>
 							값이 양수면 시계 반대반향으로 회전(비틀게되고)하고 값이 음수면 시계 방향으로 회전(비틀게)하게 됩니다.
@@ -295,14 +296,14 @@
 								}
 							</textarea>
 						</div>
-						<figure class="img_figure mt_s">
+						<figure class="img_figure mt_ms">
 							<figcaption class="mt_0">
 								<i>[<code class="bg_none t_blue">translate</code> 함수 예시]</i><br>
 								<span class="mt_s">8번 박스를 이동시켰음에도 본래 차지(그 공간을 사용하지 않더라도)하고 있던 공간(빨간 보더 공간)은 유지합니다.</span>
 							</figcaption>
 							<img src="/ukncs/images/css/cssAdvanced/uxkm_transform-translate.svg" alt="translate 함수 예시" class="mt_m">
 						</figure>
-						<blockquote class="uk_note mt_s" role="note">
+						<blockquote class="uk_note mt_ms" role="note">
 							<h5 class="sound_only">요약 설명</h5>
 							<p>
 								크롬 개발자이자 프론트 엔드 개발의 선두주자인 Paul Irish는 position 속성값과 translate()
@@ -380,7 +381,7 @@
 							a1 c1 b1 d1 a2 c2 b2 d2 = a1 a2 + c1 b2 a1 c2 + c1 d2 b1 a2 + d1 b2 b1 c2 + d1 d2
 						</p>
 						-->
-						<figure class="img_figure mt_s">
+						<figure class="img_figure mt_ms">
 							<figcaption class="mt_0">[ <b class="t_black weight-500">matrix 표</b> ]</figcaption>
 							<!--
 							<div class="mt_m">
@@ -409,9 +410,9 @@
 		</article>
 
 		<!-- transform-origin 속성 -->
-		<article class="indent mt_xxl">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn"><i class="t_blue">transform-origin</i> 속성</h3>
-			<p class="mt_s">
+			<p class="mt_ms">
 				<code>transform-origin</code>은 <code>transform</code>에 대한 원점을 지정하는 속성입니다.<br>
 				요소의 기본기준점을 설정할 때 사용되며, 기본기준점은 요소의 정중앙 입이다. (50%, 50% or center center)<br>
 				<code>translate()</code>는 기준점을 변경하여도 일정 거리만큼 이동하므로 의미가 없습니다.<br>
@@ -420,11 +421,11 @@
 				<code class="t_green">100% 100%</code>는 <code class="t_green">bottom right</code>과 같은 값입니다.
 			</p>
 
-			<ol class="dot_lst indent mt_sm">
+			<ol class="dot_lst indent mt_s">
 				<li>기본 값은 50% 50%. 즉 요소의 정중앙입니다.</li>
 				<li>값으로는 <code>px</code>, <code>%</code>, <code>cm</code> 등등 외에도 <code>left</code>, <code>center</code>, <code>right</code>, <code>top</code>, <code>bottom</code>를 쓸 수 있습니다.</li>
 			</ol>
-			<div class="uk_gist_code_box mt_ms" data-tit="transform [transform-origin]">
+			<div class="uk_gist_code_box mt_m" data-tit="transform [transform-origin]">
 				<textarea readonly="readonly">
 					.box {
 						-webkit-transform-origin: 50% 100%;
