--- a/assets/02-css/04-cssAdvanced/03-css_animation.html
+++ b/assets/02-css/04-cssAdvanced/03-css_animation.html
@@ -44,9 +44,9 @@
 
 		<ul class="ol_lst">
 			<!-- 1. animation-name 속성 (필수 선언) -->
-			<li class="tit_h3 mt_m">
+			<li class="tit_h3 mt_l">
 				<h3><i class="t_blue">animation-name</i> 속성 <i class="t_red">(필수 선언)</i></h3>
-				<p class="mt_s">
+				<p class="mt_ms">
 					애니메이션 효과의 이름을 설정합니다.<br>
 					해당 <code>@keyframes</code> 규칙에서 정의된 이름을 사용하고, 애니메이션 이름 속성에는 단 하나의 값만을 사용할 수 있습니다.<br>
 					이름 이외에 사용할 수 있는 값은 요소에서 애니메이션이 진행되는 것을 막는데 사용하는 none 뿐입니다.
@@ -69,9 +69,9 @@
 			</li>
 
 			<!-- 2. animation-duration 속성 (필수 선언) -->
-			<li class="tit_h3 mt_ml">
+			<li class="tit_h3 mt_xl">
 				<h3><i class="t_blue">animation-duration</i> 속성 <i class="t_red">(필수 선언)</i></h3>
-				<p class="mt_s">
+				<p class="mt_ms">
 					애니메이션 효과를 재생할 시간을 설정합니다.<br>
 					<code>@keyframe Rule</code>에서 선언한 0%부터 100%까지의 움직임을 몇 초에 걸쳐 구현할지를 정합니다.<br>
 					<code>transition-duration</code> 속성과 기능적으로 동일합니다.<br>
@@ -88,9 +88,9 @@
 			</li>
 
 			<!-- 3. animation-delay 속성 -->
-			<li class="tit_h3 mt_ml">
+			<li class="tit_h3 mt_xl">
 				<h3><i class="t_blue">animation-delay</i> 속성</h3>
-				<p class="mt_s">
+				<p class="mt_ms">
 					애니메이션 효과가 나타나기까지의 지연 시간을 설정합니다.<br>
 					<code>transition-delay</code> 속성과 같은 역할을 담당하고 있습니다.<br>
 					<code>transition-delay</code> 속성에서도 <code>ms</code> 또는 <code>s</code> 단위의 시간 값을 사용하며, 이를 통해 애니메이션의 시작을 지연시킬 수 있습니다.<br>
@@ -108,9 +108,9 @@
 			</li>
 
 			<!-- 4. animation-iteration-count 속성 -->
-			<li class="tit_h3 mt_ml">
+			<li class="tit_h3 mt_xl">
 				<h3><i class="t_blue">animation-iteration-count</i> 속성</h3>
-				<p class="mt_s">
+				<p class="mt_ms">
 					애니메이션 효과가 몇 번 반복될지를 설정합니다.<br>
 					숫자(양의 정수)와 <code>infinite</code>(무한 반복)만 선언 가능합니다. 만약 숫자 5를 선언하면 다섯번 반복 후 애니메이션이 정지됩니다.<br>
 					기본적으로 단 한번만 재생(원래대로 돌아가는 것까지 포함하면 두 번 재생)되는 <code>transition</code> 효과와 달리, 애니메이션은 재생 횟수에 제한이 없습니다.<br>
@@ -131,9 +131,9 @@
 			</li>
 
 			<!-- 5. animation-direction 속성 -->
-			<li class="tit_h3 mt_ml">
+			<li class="tit_h3 mt_xl">
 				<h3><i class="t_blue">animation-direction</i> 속성</h3>
-				<p class="mt_s">
+				<p class="mt_ms">
 					애니메이션의 진행 방향을 설정합니다.<br>
 					애니메이션의 반복(loop)이 최소 2회 이상일 경우, 한 사이클(0% 부터 100%)이 종료되고 나서 다음 반복 때는 어떤 방향으로 움직임을 이어 나갈지 정의합니다.<br>
 					애니메이션은 일반적으로 시작 키 프레임에서부터 마지막 키 프레임 순으로 순차적으로 재생(<code>transition</code>와 같이)되지만 역뱡향 또는 양방향으로 재생시킬 수도 있습니다.<br>
@@ -155,9 +155,9 @@
 			</li>
 
 			<!-- 6. animation-fill-mode 속성 -->
-			<li class="tit_h3 mt_ml">
+			<li class="tit_h3 mt_xl">
 				<h3><i class="t_blue">animation-fill-mode</i> 속성</h3>
-				<p class="mt_s">
+				<p class="mt_ms">
 					한 사이클의 애니메이션이 재생되기 전과 종료되고 난 후의 애니메이션 상태를 정의한다.<br>
 					애니메이션을 적용할 요소의 CSS 위치와 애니메이션 시작 위치가 다를 경우와
 					애니메이션이 한 번만 재생되는 경우,<br>
@@ -206,9 +206,9 @@
 			</li>
 
 			<!-- 7. animation-play-state 속성 -->
-			<li class="tit_h3 mt_ml">
+			<li class="tit_h3 mt_xl">
 				<h3><i class="t_blue">animation-play-state</i> 속성</h3>
-				<p class="mt_s">
+				<p class="mt_ms">
 					애니메이션 효과의 재생 상태를 설정합니다. 초기화가 아닌 정지, 재생을 할 수 있으며 필요한 상황에만 사용합니다.<br>
 					<code>animation-play-state</code>는 스스로 작동되지 않으며, 마우스 오버(hover) 또는 <code>javascript click</code> 등의 이벤트가 있어야만 작동됩니다.<br>
 					애니메이션의 진행상황을 설정할 수 있는 <code>animation-play-state</code> 속성은 축약형 문법에 포함될 수 없으며, 문법은 다음과 같이 사용합니다.
@@ -262,7 +262,7 @@
 		</p>
 
 		<!-- 각 프레임마다 색상지정 -->
-		<div class="indent mt_m">
+		<div class="indent mt_xl">
 			<h3 class="ml_mn">각 프레임마다 css지정</h3>
 			<div class="uk_gist_code_box mt_ms" data-tit="animation [@keyframes rule]">
 				<textarea readonly="readonly">
@@ -285,7 +285,7 @@
 		</div>
 
 		<!-- css의 속성이 겹치는 경우 콤마로 구분하여 그룹화 -->
-		<div class="indent mt_m">
+		<div class="indent mt_xl">
 			<h3 class="ml_mn">css의 속성이 겹치는 경우 콤마로 구분하여 그룹화</h3>
 			<div class="uk_gist_code_box mt_ms" data-tit="animation [@keyframes rule]">
 				<textarea readonly="readonly">
@@ -315,9 +315,9 @@
 
 		<ul class="ol_lst">
 			<!-- 1. 속성별 선언 -->
-			<li class="tit_h3 mt_m">
+			<li class="tit_h3 mt_l">
 				<h3>속성별 선언</h3>
-				<p class="mt_s">
+				<p class="mt_ms">
 					속성별로 선언할 경우 선언 순서는 중요하지 않습니다.<br>
 					다만, 공동작업이나 추후 관리를 위해 축약형 선언의 순서에 맞춰 선언하는 것을 추천합니다.
 				</p>
@@ -336,9 +336,9 @@
 			</li>
 
 			<!-- 2. 축약형 선언 -->
-			<li class="tit_h3 mt_ml">
+			<li class="tit_h3 mt_xl">
 				<h3>축약형 선언</h3>
-				<p class="mt_s">
+				<p class="mt_ms">
 					주로 쓰이는 방법입니다.<br>
 					대부분 하나의 객체당 하나의 <code>@keyframes</code>에 대한 <code>animation</code>을 적용하므로 이 경우 코드절약을 위해 한줄로 사용하는 것이 좋습니다.
 				</p>
@@ -375,9 +375,9 @@
 			</li>
 
 			<!-- 3. 복수 선언 -->
-			<li class="tit_h3 mt_ml">
+			<li class="tit_h3 mt_xl">
 				<h3>복수 선언</h3>
-				<p class="mt_s">
+				<p class="mt_ms">
 					콤마(,)로 구분하여 두 개 이상의 <code>@keyframes Rule</code>로 정의 된 애니메이션을 한번에 선언할 수 있습니다.
 				</p>
 				<div class="uk_gist_code_box mt_ms" data-tit="animation syntax [Multiple declaration]">
@@ -392,9 +392,9 @@
 			</li>
 
 			<!-- 4. Steps 선언 -->
-			<li class="tit_h3 mt_ml">
+			<li class="tit_h3 mt_xl">
 				<h3>Steps 선언</h3>
-				<p class="mt_s">
+				<p class="mt_ms">
 					애니메이션의 흐름을 Step(단계)화해서 제어할 수 있습니다.<br>
 					<code>duration</code> 값과 연계해서 선언하여 일종의 Frame Rate(초당 프레임 수)를 설정하거나 혹은, 셀 애니메이션처럼 연계된 동작을 표현할 수도 있습니다.<br>
 					<code>steps(스텝 수)</code>로 선언합니다.
@@ -409,8 +409,9 @@
 			</li>
 		</ul>
 
-		<div class="view_editor edit_code mt_l" data-target="css/step03/4.3.animation/4.3.animation.html">
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="view_editor edit_code mt_xl" data-target="css/step03/4.3.animation/4.3.animation.html">
+			<h3 class="ve_tit">animation 작성 예제</h3>
+			<div class="uk_editor indent mt_m" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
