--- a/assets/02-css/04-cssAdvanced/05-css_grid_part2.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part2.html
@@ -10,7 +10,7 @@
 		<h2 class="ml_mn">4.5.4. <i class="t_blue">명시적</i> 그리드(Explicit Grids)와 <i class="t_blue">암시적</i> 그리드(Implicit Grids)의 차이점</h2>
 
 		<!-- 명시적 그리드(Explicit Grids) -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">명시적 그리드(Explicit Grids)</h3>
 			<p class="mt_ms">
 				속성을 사용하여 격자를 형성하는 선 트랙의 고정 된 수를 정의할 수 있습니다.<br>
@@ -18,7 +18,7 @@
 			</p>
 
 			<!-- 4 개의 수직 트랙 (열)과 2 개의 수평 트랙 (행)이있는 명시적 그리드 -->
-			<section class="mt_l indent">
+			<section class="indent mt_l">
 				<h4 class="ml_mn">4 개의 수직 트랙 (열)과 2 개의 수평 트랙 (행)이있는 명시적 그리드</h4>
 				<figure class="img_figure mt_m">
 					<img src="/ukncs/images/css/grid/uxkm_grid-explicit-grid.svg" alt="4 개의 수직 트랙 (열)과 2 개의 수평 트랙 (행)이있는 명시적 그리드">
@@ -31,7 +31,7 @@
 			</section>
 
 			<!-- 반복 표기법으로 생성 된 100px 너비의 세로 트랙 4 개가 포함 된 명시적 그리드 -->
-			<section class="mt_l indent">
+			<section class="indent mt_l">
 				<h4 class="ml_mn">반복 표기법으로 생성 된 100px 너비의 세로 트랙 4 개가 포함 된 명시적 그리드</h4>
 				<figure class="img_figure mt_m">
 					<img src="/ukncs/images/css/grid/uxkm_grid-explicit-grid-auto-fitting.svg" alt="반복 표기법으로 생성 된 100px 너비의 세로 트랙 4 개가 포함 된 명시적 그리드">
@@ -44,7 +44,7 @@
 			</section>
 
 			<!-- 그리드 컨테이너에 맞게 너비가 100px 인 수직 트랙을 반복 -->
-			<section class="mt_l indent">
+			<section class="indent mt_l">
 				<h4 class="ml_mn">그리드 컨테이너에 맞게 너비가 100px 인 수직 트랙을 반복</h4>
 				<figure class="img_figure mt_m">
 					<img src="/ukncs/images/css/grid/uxkm_grid-explicit-grid-auto-fill.svg" alt="그리드 컨테이너에 맞게 너비가 100px 인 수직 트랙을 반복">
@@ -57,7 +57,7 @@
 			</section>
 
 			<!-- auto-fit 키워드를 사용한 반복 표기법은 그리드 컨테이너에 필요한만큼 많은 트랙을 만듬 -->
-			<section class="mt_l indent">
+			<section class="indent mt_l">
 				<h4 class="ml_mn">auto-fit 키워드를 사용한 반복 표기법은 그리드 컨테이너에 필요한만큼 많은 트랙을 만듬</h4>
 				<figure class="img_figure mt_m">
 					<img src="/ukncs/images/css/grid/uxkm_grid-explicit-grid-auto-fit.svg" alt="auto-fit 키워드를 사용한 반복 표기법은 그리드 컨테이너에 필요한만큼 많은 트랙을 만듬">
@@ -70,7 +70,7 @@
 			</section>
 
 			<!-- 세로 트랙보다 많은 항목이 있으면 더 많은 행이 추가 -->
-			<section class="mt_l indent">
+			<section class="indent mt_l">
 				<h4 class="ml_mn">세로 트랙보다 많은 항목이 있으면 더 많은 행이 추가</h4>
 				<figure class="img_figure mt_m">
 					<img src="/ukncs/images/css/grid/uxkm_grid-explicit-grid-rows.svg" alt="세로 트랙보다 많은 항목이 있으면 더 많은 행이 추가">
@@ -83,7 +83,7 @@
 			</section>
 
 			<!-- 두 축에서 auto-fill 키워드를 사용한 반복 표기법 -->
-			<section class="mt_l indent">
+			<section class="indent mt_l">
 				<h4 class="ml_mn">두 축에서 auto-fill 키워드를 사용한 반복 표기법</h4>
 				<figure class="img_figure mt_m">
 					<img src="/ukncs/images/css/grid/uxkm_grid-explicit-grid-auto-fill-both.svg" alt="두 축에서 auto-fill 키워드를 사용한 반복 표기법">
@@ -97,7 +97,7 @@
 		</article>
 
 		<!-- 암시적 그리드(Implicit Grids) -->
-		<article class="mt_xl indent">
+		<article class="indent mt_xl">
 			<h3 class="ml_mn t_blue">암시적 그리드(Implicit Grids)</h3>
 			<p class="mt_ms">
 				그리드에 셀보다 많은 그리드 항목이 있거나 그리드 항목이 명시적 그리드 외부에 배치 될 때
@@ -107,7 +107,7 @@
 			</p>
 
 			<!-- 암시적 선 및 트랙을 생성하는 명시적 그리드 외부에 배치 된 두 개의 항목 -->
-			<section class="mt_l indent">
+			<section class="indent mt_l">
 				<h4 class="ml_mn">암시적 선 및 트랙을 생성하는 명시적 그리드 외부에 배치 된 두 개의 항목</h4>
 				<figure class="img_figure mt_m">
 					<img src="/ukncs/images/css/grid/uxkm_grid-implicit-grids.svg" alt="암시적 선 및 트랙을 생성하는 명시적 그리드 외부에 배치 된 두 개의 항목">
@@ -120,7 +120,7 @@
 			</section>
 
 			<!-- 암시적 트랙의 고정 너비 및 높이 -->
-			<section class="mt_l indent">
+			<section class="indent mt_l">
 				<h4 class="ml_mn">암시적 트랙의 고정 너비 및 높이</h4>
 				<figure class="img_figure mt_m">
 					<img src="/ukncs/images/css/grid/uxkm_grid-implicit-grids-tracks.svg" alt="암시적 트랙의 고정 너비 및 높이">
@@ -133,7 +133,7 @@
 			</section>
 
 			<!-- 한 행과 한 열씩 시작으로 확장 된 암시적 그리드 -->
-			<section class="mt_l indent">
+			<section class="indent mt_l">
 				<h4 class="ml_mn">한 행과 한 열씩 시작으로 확장 된 암시적 그리드</h4>
 				<figure class="img_figure mt_m">
 					<img src="/ukncs/images/css/grid/uxkm_grid-implicit-grids2.svg" alt="한 행과 한 열씩 시작으로 확장 된 암시적 그리드">
@@ -146,7 +146,7 @@
 			</section>
 
 			<!-- 항목 수가 셀 수를 초과하면 행 대신 새 열이 추가 -->
-			<section class="mt_l indent">
+			<section class="indent mt_l">
 				<h4 class="ml_mn">항목 수가 셀 수를 초과하면 행 대신 새 열이 추가</h4>
 				<figure class="img_figure mt_m">
 					<img src="/ukncs/images/css/grid/uxkm_grid-implicit-grids-auto-flow.svg" alt="항목 수가 셀 수를 초과하면 행 대신 새 열이 추가">
@@ -159,7 +159,7 @@
 			</section>
 
 			<!-- 명시적인 선과 트랙이없는 암시적 그리드 -->
-			<section class="mt_l indent">
+			<section class="indent mt_l">
 				<h4 class="ml_mn">명시적인 선과 트랙이없는 암시적 그리드</h4>
 				<figure class="img_figure mt_m">
 					<img src="/ukncs/images/css/grid/uxkm_grid-implicit-grids-only.svg" alt="명시적인 선과 트랙이없는 암시적 그리드">
